--- a/hum.csproj
+++ b/hum.csproj
@@ -1,10 +1,19 @@
 <Project Sdk="Microsoft.NET.Sdk">
-
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net9.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    
+    <!-- Global tool configuration -->
+    <PackAsTool>true</PackAsTool>
+    <ToolCommandName>hum</ToolCommandName>
+    <PackageId>hum</PackageId>
+    <PackageVersion>1.0.0</PackageVersion>
+    <Authors>Your Name</Authors>
+    <Description>A CLI tool for bootstrapping apps and deployment pipelines</Description>
+    <PackageTags>dotnet;cli;devops;deployment</PackageTags>
+    <RepositoryUrl>https://github.com/your-org/hum</RepositoryUrl>
   </PropertyGroup>
 
   <ItemGroup>
