--- a/hum.csproj
+++ b/hum.csproj
@@ -18,6 +18,7 @@
 
   <ItemGroup>
     <PackageReference Include="Octokit" Version="14.0.0" />
+    <PackageReference Include="SSH.NET" Version="2025.0.0" />
     <PackageReference Include="System.CommandLine" Version="2.0.0-beta4.22272.1" />
     <PackageReference Include="YamlDotNet" Version="16.3.0" />
   </ItemGroup>
