--- a/ansible/inventory.yml
+++ b/ansible/inventory.yml
@@ -21,4 +21,12 @@ all:
             repository_url: git@github.com:Akwaduk/test-repo-push-fix.git
             ASPNETCORE_ENVIRONMENT: Staging
             PROJECT_NAME: test-repo-push-fix
+        my-app-server:
+          name: my-app-server
+          variables:
+            project_name: my-app
+            deploy_path: /var/www/my-app
+            repository_url: git@github.com:Akwaduk/my-app.git
+            ASPNETCORE_ENVIRONMENT: Staging
+            PROJECT_NAME: my-app
   hosts: {}
